[package]
name = "eink-disp"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.7.1"
embedded-graphics-simulator = "0.3.0"
epd-waveshare = "0.5.0"
#ergast-rs = "0.2.0"
ergast-rs = { version = "*", path = "../ergast-rs/" }
eyre = "0.6.8"
smallvec = "1.8.0"
tokio = { version = "1", features = ["full"], optional = true }
warp = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["server"]
# Enables the HTTP server used to render various pages
server = ["tokio", "warp"]
