[package]
name = "eink-disp"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.7.1"
embedded-graphics-simulator = "0.4.0"
epd-waveshare = "0.5.0"
ergast-rs = "0.2.1"
#ergast-rs = { version = "*", path = "../ergast-rs/" }
eyre = "0.6.8"
smallvec = "1.10.0"
tokio = { version = "1.23.0", features = ["full"], optional = true }
unidecode = "0.3.0"
warp = { version = "0.3.3", optional = true }
hyper = "0.14.23"
bytes = "1.3.0"

[dev-dependencies]
tokio = { version = "1.23.0", features = ["full"] }

[features]
default = ["server"]
# Enables the HTTP server used to render various pages
server = ["tokio", "warp"]
